# Industrial-Team-3

./: .gitignore  README.md
LLM/: QA.csv  SmartClerk.py  abc.txt  d copy.txt  d.txt  d_formatted.txt  data.py  goods.txt  lima_test.py  llmTr.py  prompt.txt
firmware/: .gitignore  Cargo.toml  boot.py  cert.pem  cfg.toml.EXAMPLE  images.py  privkey.pem  readme.md
firmware-old/: boot.py
firmware/.cargo/: config.toml
firmware/assets/: basket_veryhappy_frames
firmware/lib/wifi/: Cargo.toml  cfg.toml.example
firmware/src/: display.rs  main.rs  mqtt.rs  network.rs  piezo.rs  rfid.rs
webapp/basket_event/: lambda_function.py
webapp/basket_event/package/epcpy-0.1.7.dist-info/: METADATA  RECORD  entry_points.txt
webapp/basket_shoppinglist/: lambda_function.py
webapp/frontend/: README.md  index.html  package-lock.json  package.json
webapp/frontend/src/: App.vue  main.js
webapp/frontend/src/components/: BasketContents.vue  ShoppingList.vue
