[package]
name = "basket-rs"
version = "0.1.0"
authors = ["David Košťál <kostal.david8@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", ] # "esp-idf-svc/native"

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-svc = { version = "0.48", features = ["embassy-time-driver", "critical-section"] }
esp-idf-hal = { version = "0.43.1"}
esp32-hal-proc-macros = "0.2.0"
embassy-time = "0.3.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

# Display
sh1106 = "0.5.0"
embedded-graphics = "0.8.1"

# Utils
log = { version = "0.4", default-features = false }
anyhow = "1.0.82"
toml-cfg = "0.1.3"
num-derive = "0.4.2"
num-traits = "0.2.18"
const-str = "0.5.7"
hex = "0.4.3"

[build-dependencies]
embuild = "0.31.3"
